--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,4 +1,4 @@
-apiVersion: backstage.io/v1alpha1
+ryapiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: rhdh-team-docs
@@ -32,4 +32,4 @@ metadata:
 spec:
   type: documentation
   lifecycle: active
-  owner: rhdh-team
+  owner: Gerry-Forde
