--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,7 +5,7 @@ metadata:
   title: RHDH local
   description: RHDH local is ideal for trying out the basic features of RHDH (like Software Catalogs or TechDocs) without the need for a Kubernetes cluster.
   annotations:
-    #backstage.io/techdocs-ref: dir:.
+    backstage.io/techdocs-ref: dir:.
     github.com/project-slug: redhat-developer/rhdh-local
     github.com/team-slug: redhat-developer/rhdh-team
     #sonarqube.org/project-key: redhat-developer_rhdh-local
