--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,14 +1,15 @@
 apiVersion: backstage.io/v1alpha1
-kind: Component
+kind: System
 metadata:
-  name: rhdh-local
-  title: RHDH local
-  description: RHDH local is ideal for trying out the basic features of RHDH (like Software Catalogs or TechDocs) without the need for a Kubernetes cluster.
+  name: rhdh
+  title: Red Hat Developer Hub
+  description: Red Hat Developer Hub is an enterprise-grade Internal Developer Portal based on Backstage.
   annotations:
     backstage.io/techdocs-ref: dir:.
-    github.com/project-slug: redhat-developer/rhdh-local
+    github.com/project-slug: redhat-developer/rhdh
     github.com/team-slug: redhat-developer/rhdh-team
-    #sonarqube.org/project-key: redhat-developer_rhdh-local
+    quay.io/repository-slug: rhdh-community/rhdh
+    sonarqube.org/project-key: janus-idp_backstage-showcase
   tags:
     - backstage
     - rhdh
@@ -29,14 +30,53 @@ metadata:
       title: Jira issues
       icon: help
       type: jira
-    - url: https://github.com/redhat-developer/rhdh-local
+    - url: https://github.com/redhat-developer/rhdh
       title: Sourcecode on GitHub
       icon: github
       type: sourcecode
 spec:
-  type: tool
-  lifecycle: development
+  type: product
   owner: rhdh-team
-  # system and subcomponent refers https://github.com/redhat-developer/rhdh/blob/main/catalog-info.yaml
+  lifecycle: production
+---
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
+  name: rhdh
+  title: Red Hat Developer Hub
+  description: Red Hat Developer Hub is an enterprise-grade Internal Developer Portal based on Backstage.
+  annotations:
+    backstage.io/techdocs-ref: dir:.
+    github.com/project-slug: redhat-developer/rhdh
+    github.com/team-slug: redhat-developer/rhdh-team
+    quay.io/repository-slug: rhdh-community/rhdh
+    sonarqube.org/project-key: janus-idp_backstage-showcase
+  tags:
+    - backstage
+    - rhdh
+  links:
+    - url: https://red.ht/rhdh
+      title: Product website
+      icon: star
+      type: website
+    - url: https://developers.redhat.com/blog
+      title: Red Hat Developer Blog
+      icon: catalog
+      type: blog
+    - url: https://docs.redhat.com/fr/documentation/red_hat_developer_hub/
+      title: Official documentation
+      icon: docs
+      type: docs
+    - url: https://issues.redhat.com/browse/RHIDP
+      title: Jira issues
+      icon: help
+      type: jira
+    - url: https://github.com/redhat-developer/rhdh
+      title: Sourcecode on GitHub
+      icon: github
+      type: sourcecode
+spec:
+  type: product
+  owner: rhdh-team
+  lifecycle: production
   system: rhdh
-  subcomponentOf: rhdh
