--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: rhdh
+  name: rhdh-local
   title: My Red Hat Developer Hub
   description: Red Hat Developer Hub is an enterprise-grade Internal Developer Portal based on Backstage.
   annotations:
